# clip-daemon

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rqlens.toml  rust-toolchain.toml
docs/: adr-0001-ringboard-facade.md  phase4-safety.md  phase5-actions.md  qualification-results.md  quality-review.md
packaging/dbus/: org.laufan.ClipDaemon.service
packaging/systemd/: clip-daemon.service
scripts/: qualify-ringboard.sh
src/: actions.rs  api.rs  backend.rs  classification.rs  client.rs  daemon.rs  editing.rs  fake.rs  launch.rs  lib.rs  main.rs  model.rs  protocol.rs  ringboard.rs  session.rs  settings.rs
src/daemon/: subscription.rs
src/ringboard/: content.rs  mutation.rs
test_support/: clip-api-v1.json
tests/: api.rs
